# ocr-pdf2md

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-08-fuzzy-header-footer-detection.md
docs/superpowers/specs/: 2026-04-08-formatting-fixes-design.md  2026-04-08-fuzzy-header-footer-detection-design.md  2026-04-08-line-width-formatting-design.md
src/ocr_pdf2md/: main.py
src/pdf2md/: main.py
tests/: conftest.py  test_e2e.py
